# nonlibc

./: .clang-format  .gitignore  .travis.yml  .ycm_extra_conf.py  Gemfile  Makefile  README.md  RELEASE_CHECKLIST.md  _config.yml  bootstrap.py  bootstrap.sh  build_package.sh  builder.sh  custom-nix-packages.nix  default.nix  gemset.nix  hydra.nix  irequire.py  jekyll.nix  meson.build  mesonHook.sh  meson_options.txt  nix-toolchain.sh  release.nix
docs/: TODO.md  building.md  hacking_tips.md  overview.md
include/: b2hx.h  binhex.h  epoll.h  epoll_kqueue.h  epoll_track.h  fnv.h  hx2b.h  lifo.h  meson.build  messenger.h  ndebug.h  nlc_endian.h  nlc_epoll.h  nlc_linuxversion.h  nlc_urand.h  nmath.h  nmem.h  nonlibc.h  nonlibc.h.in  nstring.h  pcg_rand.h  posigs.h  zed_dbg.h
lib/: binhex.c  epoll_kqueue.c  epoll_track.c  fnv.c  lifo.c  meson.build  messenger.c  nmem.c  nmem_bsd.c  nmem_linux.c  npath.c  pcg_rand.c  posigs.c
man/: meson.build  ncp.md
nixpkgs/: default.nix
src/: epoll_track.c  meson.build  nmem.c  nmem_bsd.c
test/: atop_test.c  binhex_test.c  epoll_track_test.c  epoll_track_test_destructor.c  epoll_track_test_types.c  fnv_test.c  lifo_test.c  meson.build  messenger_test.c  mg_test.c  mgrp_test.c  ndebug_test.c  nlc_urand_test.c  nmath_test.c  npath_test.c  nstring_test.c  pcg_rand_test.c  zed_dbg_test.c
toolchain/: nonlibc.wrap
util/: fnvsum.c  meson.build  ncp.c  test_fnvsum.py  test_ncp.py
